# KinectFusionLib

./: .gitignore  CMakeLists.txt  README.md
cmake/: installConfig.cmake  packageConfig.cmake.in
include/: data_types.h  kinectfusion.h
include/KinectFusionLib/: KinectFusion.h
src/: KinectFusion.cpp  kinectfusion.cpp  pose_estimation.cpp  surface_measurement.cpp
src/cuda/: extract_pointcloud.cu  marching_cubes.cu  pose_estimation.cu  surface_measurement.cu  surface_prediction.cu  surface_reconstruction.cu
src/cuda/include/: common.h
